[package]
name = "Rusty_Console_TicTacToe"
version = "0.1.0"
authors = ["Alexander Öberg <stativetroller7@gmail.com>"]
edition = "2018"
description = "TicTacToe on the console written in rust."
readme = "README.md"
repository = "https://github.com/AlexanderReaper7/Rusty_Console_TicTacToe"
keywords = ["games", "tictactoe","console"]
categories = ["games"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
